--- a/seedly/src/App.css
+++ b/seedly/src/App.css
@@ -28,6 +28,17 @@
   color: #61dafb;
 }
 
+
+/* ~~~~~~~~~~~~~~~~~~~~~~ LANDING PAGE STYLING ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+.LandingPage {
+  background-color: #21D9A8;
+  height: 2000px;
+  width: 100vw;
+}
+
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
