--- a/seedly/src/App.css
+++ b/seedly/src/App.css
@@ -36,8 +36,20 @@
   width: 100vw;
 }
 
+/* ~~~~~~~~~~~~~~~~~~~~~~ HOME PAGE STYLING ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+.Homepage {
+  background-color: #21D9A8;
+  height: 2000px;
+  width: 100vw;
+}
 
-
+.Navbar {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  left: 70vw;
+  bottom: 14vh;
+}
 
 @keyframes App-logo-spin {
   from {
