--- a/seedly/src/App.css
+++ b/seedly/src/App.css
@@ -83,6 +83,12 @@
   justify-content: space-between;
 
 }
+.Result {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
 .EachPlant {
   flex-basis: 15vw;
