started on kebab case

--- a/seedly/src/App.css
+++ b/seedly/src/App.css
@@ -97,7 +97,7 @@
 }
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~ NEW PLANT STYLING ~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-.NewPlantPage {
+.new-plant-page {
   background-color: #21D9A8;
   height: 6000px;
   width: 100vw;
