--- a/seedly/src/App.css
+++ b/seedly/src/App.css
@@ -53,7 +53,7 @@
 
 /* ~~~~~~~~~~~~~~~~~~~~~~ EXPLORE STYLING ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
-.ExplorePage {
+.explore-page {
   background-color: #21D9A8;
   height: 6000px;
   width: 100vw;
@@ -66,7 +66,7 @@
   width: 15vw;
 }
 
-.ResultsHeading {
+.results-heading {
   position: relative;
   bottom: 70vh;
   left: 8vw;
