--- a/seedly/src/App.css
+++ b/seedly/src/App.css
@@ -37,7 +37,7 @@
 }
 
 /* ~~~~~~~~~~~~~~~~~~~~~~ HOME PAGE STYLING ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-.Homepage {
+.home-page {
   background-color: #21D9A8;
   height: 2000px;
   width: 100vw;
